v0.11/8/8.11.tf
resource "aws_lb_listener" "redirect_http_to_https" {
  load_balancer_arn = "${aws_lb.example.arn}"
  port              = "8080"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}
