v0.11/8/8.12.tf
resource "aws_lb_target_group" "example" {
  name                 = "example"
  vpc_id               = "${aws_vpc.example.id}"
  target_type          = "ip"
  port                 = 80
  protocol             = "HTTP"
  deregistration_delay = 300

  health_check {
    path                = "/"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    matcher             = 200
    port                = "traffic-port"
    protocol            = "HTTP"
  }

  depends_on = ["aws_lb.example"]
}
