v0.11/8/8.13.tf
resource "aws_lb_listener_rule" "example" {
  listener_arn = "${aws_lb_listener.https.arn}"
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = "${aws_lb_target_group.example.arn}"
  }

  condition {
    field  = "path-pattern"
    values = ["/*"]
  }
}
